# python-batch-image-processing

./: .coverage  CHANGELOG.rst  LICENSE.md  README.md  pyproject.toml  tox.ini
.tox/py37/: .tox-info.json
.tox/py38/: .tox-info.json
batch_image_processing/: image_processor.py
tests/: __init__.py  test_image_proccessor.py
