[tool.poetry]
name = "batch-image-processing"
version = "0.1.0"
description = ""
authors = ["Akash Manujaya <akash@baypromo.net>"]
readme = "README.md"
packages = [{include = "batch_image_processing"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
